*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.0 ===

* TODO: write chanes here as a dot list.